# batchFileOperator

./: CMakeLists.txt  README.md  conanfile.txt
assets/UML/: projectUML.uxf
assets/testTxtFile/: test_end.txt
src/XCrypt/: xcrypt.cpp  xcrypt.h
src/XCryptTask/: xcrypt_task.cpp  xcrypt_task.h
src/XData/: xdata.cpp  xdata.h
src/XFileCrypt/: xfile_crypt.cpp  xfile_crypt.h
src/XIOStream/: xiostream.cpp  xiostream.h
src/XReadTask/: xread_task.cpp  xread_task.h
src/XWriteTask/: xwrite_task.cpp  xwrite_task.h
tests/: CMakeLists.txt  Test_chain_res.cpp  Test_create_pool.cpp  Test_crypt_file.cpp  Test_read_task.cpp  Test_run_decrypt.cpp  Test_run_filecrypt.cpp  Test_run_task1.cpp  Test_write_task.cpp
tool/: CMakeLists.txt  cryptFile.cpp
